fixed footer on mobilel

--- a/css/style.css
+++ b/css/style.css
@@ -210,7 +210,7 @@ header .header-logo {
   font-family: gothemBold;
   color: #fff;
   background-color: #56b947;
-  padding: 0.6rem 5rem;
+  padding: 0.6rem 4.8rem;
   border-radius: 25px;
   text-decoration: none;
   color: #fff;
@@ -227,7 +227,7 @@ header .header-logo {
   }
 }
 .about div .about-image-text .about-buttons-mobile .sponsor-button {
-  padding: 0.6rem 4.26rem;
+  padding: 0.6rem 4.05rem;
 }
 @media only screen and (min-width: 37.5em) {
   .about div .about-image-text .about-buttons-mobile .sponsor-button {
@@ -459,8 +459,13 @@ footer .footer-section {
   color: #fff;
 }
 footer .footer-section img {
-  width: 20rem;
+  width: 16rem;
   height: auto;
+}
+@media only screen and (min-width: 37.5em) {
+  footer .footer-section img {
+    width: 20rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
