--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -36,8 +36,12 @@ footer {
 
     img{
       
-      width: 20rem;
+     width: 16rem;
       height:auto;
+
+      @include respond(phone) {
+        width: 20rem;
+      }
     }
     
 
